                    --------------------
This file should be used by the G4 example coordinator to briefly
summarize all major modifications introduced in the code and keep
track of all tags.

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------
	 
20-10-14 mma (testem1-V10-00-09)
- PhysicsList : added G4EmStandardPhysicsSS
- TestEm1.cc : option set nThreads via command
	 
26-08-14 mma (testem1-V10-00-08)
- TestEm1.cc : SetNumberOfThreads( G4Threading::G4GetNumberOfCores() )
	 
16-06-14 mma (testem1-V10-00-07)
- remove PhysicsList::SetCuts()
		 
07-06-14 mma (testem1-V10-00-05)
- minor cleanup in PhysicsList::SetCuts()
	 
04-06-14 mma (testem1-V10-00-04)
- replace /testem/phys/setCuts by /run/setCut in all macro.
- simplify PhysicsList and its messenger, accordingly.

09-04-14 V.Ivant (testem1-V10-00-03)
- TestEm1.in - reduce printout more
- PhysicsList - added "emlowenergy" option
- HistoManager - added "h"

09-04-14 V.Ivant (testem1-V10-00-02)
- DetectorConstruction - define heavy water vapor starting from isotopes
- TestEm1.in - removed printout from second thread
     
26-03-14 mma (testem1-V10-00-01)
- Cosmetic when printing EndOfRun
     
15-12-13 mma (testem1-V10-00-00)
- introduce function Run::EndOfRun()

21-11-13 Andrea Dotti (testem1-V09-06-17)
- In case material is changed call PhysicsHasBeenModified

21-11-13 Andrea Dotti (testem1-V09-06-16)
- Use G4GlobalMagFieldMessenger instead of local class

20-11-13 Andrea Dotti (testem1-V09-06-15)
- Introduced new messenger FieldMessenger (thread-private)
- Make Field DetectorConstruction private data field, thread-private
- Use new G4RunManager::ReinitializeGeometry (requires run-V09-06-128)
  to trigger geometry rebuild when geometry changes
- Remove DetectorConstruction::Update and corresponding UI command that
  is not needed anymore