@@ -5,8 +5,10 @@
 #
 # electron 100 MeV; all processes
 #
+/control/verbose 2
 /control/cout/ignoreThreadsExcept 0
-/control/verbose 1
+/run/numberOfThreads 2
+/run/verbose 1
 #
 /testem/det/setMat Aluminium 
 /testem/det/setSize 10 m
